--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@ layout: projects
 <head>
     <script type="text/javascript">
         $(document).ready(function() {
-            $('#slider1').bxSlider({
+            $('.bxslider1').bxSlider({
                 auto: true,
                 pager: true,
                 slideWidth: 600,
@@ -57,7 +57,7 @@ layout: projects
     <div class="text-center">
         <h3>Python Password Cracking</h3>
 
-        <ul id="slider1">
+        <ul id=".bxslider1">
             <li><img src="/images/Linkedin.png" title="Linkedin's Cracked Passwords" /></li>
             <li><img src="/images/Yahoo.png" title="Yahoo's Cracked Passwords" /></li>
         </ul>
