Attempted fix of object data

--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@ layout: default
 ---
 
 <div class="resume row">
-  <object data="documents/Resume_PorrithSuong.pdf" type="application/pdf" width="100%" height="100%">
+  <object data="Resume_PorrithSuong.pdf" type="application/pdf" width="100%" height="100%">
     <p>
       You do not have a PDF Plugin for your browser. You can download the PDF <a href="/documents/Resume_Porrith Suong.pdf"> here.</a>
     </p> 
