Embed tag used instead of object

--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@ layout: default
 ---
 
 <div class="resume row">
-  <object data="/documents/Resume_PorrithSuong.pdf" type="application/pdf" width="100%" height="100%">
+  <embed src="/documents/Resume_PorrithSuong.pdf" width="100%" height="600" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html"> </embed>
     <p>
       You do not have a PDF Plugin for your browser. You can download the PDF <a href="/documents/Resume_Porrith Suong.pdf" target="_blank"> here.</a>
     </p> 
