--- a/resume.html
+++ b/resume.html
@@ -3,18 +3,18 @@ title: resume
 permalink: "resume/index.html"
 layout: default
 ---
+<head>
+  <script type = "text/javascript">
+    window.onload = function() {
+      var myPDF = new PDFObject({url: "/documents/Resume_Porrith.Suong.pdf"}).embed("pdf");      
+    }
+    </script>
+</head>
+
 
 <div class="resume row">
-  <head>
-    <script type="text/javascript" src="/public/javascripts/pdfobject.js"></script>
-    <script type="text/javascript">
-      window.onload = function() {
-        var PDF = new PDFObject({url: "/documents/Resume_PorrithSuong.pdf"}).embed("pdf");
-      }
-      </script>
-  </head>
+  <object data="/documents/Resume_PorrithSuong.pdf#" type="application/pdf" width="=100%" height="100%"></object>
   <body>
-    <object data="/documents/Resume_PorrithSuong.pdf#" type="application/pdf" width="100%" height="500px"> </object>
     <p>
       You do not have a PDF Plugin for your browser. You can download the PDF <a href="/documents/Resume_Porrith Suong.pdf" target="_blank"> here.</a>
     </p>
