Removed unnecessary html files, added home link to navigation menu

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ layout: default
   <object data="/documents/Resume_PorrithSuong.pdf#" type="application/pdf" width="=100%" height="100%"></object>
   <body>
     <p>
-      You do not have a PDF Plugin for your browser. You can download the PDF <a href="/documents/Resume_Porrith Suong.pdf" target="_blank"> here.</a>
+      If the above PDF viewer does not work, you can download a copy of my resume <a href="/documents/Resume_Porrith Suong.pdf" target="_blank"> here.</a>
     </p>
   </body> 
 </div>
