--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,13 @@
 ---
 title: projects
 permalink: "/projects/index.html"
-layout: projects
+layout: default
 ---
+<!---
 <a href="{{ "/resume" | prepend:site.baseurl }}"><i class="fa fa-chevron-left"></i> resume</a> |
 <a href="{{ '/' | prepend: site.baseurl | replace: '//', '/' }}"><i class="fa fa-home"></i> home</a>
 <br/>
-
+--->
 <head>
     <script type="text/javascript">
         $(document).ready(function() {
