Updates the webpage.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ title: Porrith Suong
 ---
 
 <p>
-I am currently an undergraduate going into my 4th year studying Computer Science at the City College of New York. I am
-a <strong>game developer</strong> and a <strong>tinkerer</strong> so I'm usually messing around in <strong>Unity</strong> pushing its limits. On my spare time, aside from enjoying a game or two, I enjoy reading historical fiction and watching streams to relax.
-</p>
+I graduated from the City College of New York with a degree in Computer Science and I currently work at Scholastic as a Software Engineer. On my spare time, I am
+a <strong>game developer</strong> and a <strong>tinkerer</strong>, so you'll find my public works on Github.</p>
 
 <p>
 Additionally, I founded my own company <a href="http://www.initialprefabs.com">initialPrefabs</a>, where we create
